fix: announcement bar borders on smaller viewports

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -248,10 +248,6 @@ textarea
   @media screen and (max-width: $break-medium)
     border: 0
 
-    &--with-welcome-image, &--with-welcome-text
-      border-left: $border
-      border-right: $border
-
   .announcement-message-text
     text-align: center
     width: 100%
